byobu (5.79) unreleased; urgency=medium

  * usr/bin/byobu-ctrl-a.in: LP: #1313209
    - fix syntax error, remove unnecessary bindkey line
    - also fixes LP: #814172

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 23 Apr 2014 18:24:26 -0500

byobu (5.78-0ubuntu1) unstable; urgency=medium

  * usr/share/byobu/profiles/dircolors:
    - give executables just a little more pop
    - use a light grey underline for symlinks
    - add whitespace before inline comment
  * usr/share/byobu/profiles/bashrc:
    - Enable Ubuntu-themed dircolors on Ubuntu systems
  * usr/bin/byobu-janitor.in: LP: #1311919
    - ensure that windows.tmux exists;  fixes warning with F5
  * usr/bin/byobu-ctrl-a.in: LP: #1311177, #1274720
    - revert r2317 as this is breaking ctrl-a in byobu-screen in a bad way

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 23 Apr 2014 18:24:21 -0500

byobu (5.77-0ubuntu1) trusty; urgency=medium

  * usr/share/byobu/profiles/dircolors,
    usr/share/byobu/profiles/Makefile.am,
    usr/share/byobu/profiles/tmuxrc:
    - add a dircolors file
  * usr/share/byobu/profiles/bashrc, usr/share/byobu/profiles/dircolors:
    - LP: #1299964
    - swap orange and aubergine on the command prompt
    - aubergine is now the directory, orange is the hostname
    - still working on dircolors, use an aubergine (like our prompt)
      for directories
  * usr/lib/byobu/logo: LP: #1299964
    - use an orange background for the UTF-8, 256-colour Ubuntu logo

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 30 Mar 2014 20:42:08 -0500

byobu (5.76-0ubuntu1) trusty; urgency=medium

  * usr/share/byobu/profiles/tmux:
    - use nice, subtle, thin pane border, a separate color from the active
      highlighted one
  * usr/share/byobu/keybindings/f-keys.tmux,
    usr/share/doc/byobu/help.tmux.txt: LP: #1294139
    - change Shift-F11 to zoom in/out of splits

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 18 Mar 2014 23:25:05 +0900

byobu (5.75-0ubuntu1) trusty; urgency=medium
